--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.2.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "ngx-bootstrap": "^12.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.3",
     "tslib": "^2.3.0",
